# linear_operator_learning

./: README.md  pyproject.toml
.github/workflows/: version-bump.yml
docs/: bibliography.bib  conf.py  index.rst
docs/_static/: custom.css
docs/reference/: kernel.rst  nn.rst  nn_functional.rst
docs/reference/kernel/: dynamics.rst  index.rst  kernel.rst
docs/reference/nn/: functional.rst  index.rst  linalg.rst  nn.rst  stats.rst  symmetric.rst
examples/detecting_independence/: detecting_independence.ipynb
linear_operator_learning/: utils.py
linear_operator_learning/kernel/: __init__.py  kernels.py  linalg.py  regressors.py  utils.py
linear_operator_learning/kernel/dynamics/: __init__.py  regressors.py  structs.py
linear_operator_learning/nn/: __init__.py  functional.py  linalg.py  regressors.py  statistics.py  stats.py
linear_operator_learning/nn/modules/: __init__.py  bilinear_net.py  ema_covariance.py  loss.py  models.py  ncp.py
linear_operator_learning/nn/symmetric/: linalg.py  statistics.py  stats.py
linear_operator_learning/nn/utils/symmetric/: __init__.py  statistics.py
