[project]
name = "linear-operator-learning"
version = "0.1.0"
description = "A packet to learn linear operators"
readme = "README.md"
authors = [
    { name = "alekfrohlich", email = "alek.frohlich@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "torch>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "ruff>=0.9.4",
]
docs = [
    "myst-parser>=4.0.0",
    "setuptools>=75.8.0",
    "sphinx>=8.1.3",
    "sphinx-autobuild>=2024.10.3",
    "sphinxawesome-theme>=5.3.2",
    "sphinxcontrib-applehelp==2.0.0",
    "sphinxcontrib-bibtex>=2.6.3",
    "sphinxcontrib-jsmath==1.0.1",
]

[tool.ruff]
line-length = 100
exclude = ["docs"]

[tool.ruff.lint]
select = [
    "D", # pydocstyle rules, limiting to those that adhere to the google convention
    "E4", # Errors
    "E7",
    "E9",
    "F", # Pyflakes
    "I"
]

ignore = [
    "F401", # Don't remove unused imports
]



[tool.ruff.lint.pydocstyle]
convention = "google"
